frontend/app/styles/app.scss
$navbar-dark-brand-color: white;
$navbar-dark-brand-hover-color: $navbar-dark-brand-color;

$font-family-sans-serif: var(--pzsh-font-family) !default;

@import "ember-bootstrap/bootstrap";

@import "ember-power-select/themes/bootstrap";
@import "secret-input";
@import "ember-power-select";

@import "footer";
@import "nav-bar";
@import "changelog";
@import "side-nav-bar";
@import "encryptable-show";
@import "encryptable-entry";
@import "password-strength-meter";
@import "folder-show";
@import "power-select";
@import "background-colors";
@import "dashboard";
@import "dashboard-card";

.w-250 {
  width: 250px;
}

.vw-8 {
  width: 8vw !important;
}

.d-inline {
  display: inline !important;
}

.justify-content-between {
  justify-content: space-between;
}

.d-flex {
  display: flex;
}

.flex-row {
  flex-direction: row;
}

.float-right {
  float: right !important;
}

.pt-10 {
  padding-top: 10%;
}

.pt-10 {
  padding-top: 10%;
}
.p-15px {
  padding: 15px;
}

.m-4 {
  margin: 4%;
}

.mt-1 {
  margin-top: 1%;
}

.ml-2 {
  margin-left: 2%;
}
.ml-5 {
  margin-left: 5%;
}

.mb-2 {
  margin-bottom: 2%;
}
.mb-15 {
  margin-bottom: 15%;
}
.mb-10 {
  margin-bottom: 10px;
}
.mb-5 {
  margin-bottom: 5px;
}

.w-4 {
  width: 4% !important;
}

.w-20 {
  width: 20% !important;
}
.w-30 {
  width: 30% !important;
}

.columns li.ember-power-select-option {
  width: 100%;
}

.x-toggle-component {
  width: 20%;
}

[role="button"] {
  cursor: pointer;
}

li a {
  cursor: pointer;
}

.mb-5-folder {
  margin-bottom: 5px !important;
}

.ml-5 {
  margin-left: 5%;
}

.mt-32 {
  margin-top: 32px;
}

.ml-15 {
  margin-left: 15px;
}

.ml-254 {
  margin-left: 254px !important;
}
.ml-238 {
  margin-left: 238px !important;
}
.mt-60 {
  margin-top: 54px !important;
}

/* Validation-errors */
.validation-errors {
  width: 100%;
  margin-top: 0.25rem;
  font-size: 90%;
  font-weight: bold;
  color: #dc3545;
}

.invalid-input-name > input {
  border: 1px solid red !important;
}

.invalid-input > textarea {
  border: 1px solid red !important;
}

.invalid-input-ps > div:nth-of-type(1) {
  border: 1px solid red !important;
}

.ember-power-select-trigger {
  height: 38px;
  line-height: 2.1;
}

.vertical-resize {
  resize: vertical;
}

.icon-big-button {
  width: 25px !important;
  height: 25px !important;
  display: inline;
}

.icon-medium-button {
  width: 20px !important;
  height: 20px !important;
  display: inline;
}

.default-button {
  padding: 6px;
  border: 1px solid #c9c9c9;
  width: 45px;
  background-color: #ebe3df;
  margin-left: 6px;
}

.icon-button {
  width: 18px !important;
  height: 18px !important;
  display: inline;
}

.icon-folder {
  width: 22px !important;
  height: 22px !important;
  display: inline;
}

.icon-button-angle {
  width: 18px !important;
  height: 18px !important;
  display: inline;
  margin-top: 4px;
  margin-left: 120px;
}

.info-icon:hover {
  cursor: help;
}

.nav .open > a,
.nav .open > a:hover,
.nav .open > a:focus {
  background-color: #2988bc !important;
  border-color: #2479a7 !important;
}

.vertical-center {
  min-height: 92px;
  display: flex;
}

.modal-alert {
  width: 100% !important;
  margin-bottom: 15px !important;
}

.border-darker {
  border-color: #b1b4b8 !important;
}

.team-card-header {
  background-color: #1e5a96;
  color: white !important;
  border: none;
}

.ember-notify-default.ember-notify-cn {
  bottom: 5em !important;
}

.ember-basic-dropdown .ember-basic-dropdown-trigger {
  padding-top: 3px;
}

.dropdown-toggle-hided::after {
  display: none;
}

.helper {
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.p-15 {
  padding: 15px 15px 15px 15px !important;
}

.description {
  overflow: auto;
  white-space: pre-line;
}

.folder-no-p {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

.border-radius-4 {
  border-radius: 4px;
}

#locale-dropdown > div {
  width: 120px;
  border: none !important;
  color: #727679;
  background-color: #f8f8f8;
}

.pl-none {
  padding-left: 0 !important;
}

.search-badge {
  padding: 5px 10px 3px 8px !important;
  margin-left: 10px;
}

.columns li {
  width: 32%;
  display: inline-block;
  padding: 5px 3px 3px 8px;
  margin-bottom: 4px;
  border-top: 1px solid #dddddd;
  border-bottom: 1px solid #dddddd;
  background-color: #f5f5f5;
}

.no-wrap {
  white-space: nowrap;
}

.overflow-hidden {
  overflow: hidden;
}

.encryptable-row:first-child {
  margin-top: 10px !important;
}

.encryptable-row:last-child {
  margin-bottom: 10px !important;
}

.icon-clippy {
  width: 19px;
}

.mobile-team-menu .dropdown-toggle::after {
  display: none;
}

.mobile-team-menu .dropdown-item {
  padding-left: 0.5rem !important;
}

.lh-2 {
  line-height: 2;
}

.team-border {
  border: 1px solid #dfdfdf;
}

.team-border {
  border: 1px solid #dfdfdf;
}

.team-border {
  border: 1px solid #dfdfdf;
}

.users-table-header {
  display: flex;
  align-items: center;
}

.add-user {
  max-height: 38px;
  margin-left: auto;
}

[readonly=""],
[aria-disabled="true"] {
  cursor: default;
}

.admin-back-button {
  border: 1px solid #c9c9c9;
  width: 45px;
  background-color: #ebe3df;
}

.navbar-dropdown-toggle-content {
  display: flex;
  color: #ffffff;
  gap: 4px;
  align-items: center;
}

.dropdown-item.active, .dropdown-item:active {
  background-color: #1E5A96;
}

.link-new-tab {
  color: #ffffff;
  display: flex;
  gap: 4px;
}

.link-new-tab:hover {
  color: #ffffff;
}

.link-new-tab-footer {
  color: #325c9e;
  display: flex;
  gap: 4px;
}

.link-new-tab-footer:hover {
  color: #325c9e;
}

pzsh-hero > h1 {
  margin: 0;
  font-size: 32px;
  color: var(--pzsh-color-brand-alt-2);
  font-family: var(--pzsh-font-family);
  font-weight: normal;
  line-height: 1;
}

pzsh-hero > h2 {
  margin-top: var(--pzsh-spacer);
  margin-bottom: 0;
  font-size: 18px;
  color: var(--pzsh-color-brand-alt-3);
  font-family: var(--pzsh-font-family);
  font-weight: normal;
  line-height: 1;
}

pzsh-banner {
  overflow: initial;
}

h5, h6 {
  font-family: var(--pzsh-font-family) !important;
  font-weight: 400 !important;
}

.ember-notify-show,
.alert,
.alert-warning {
  background-color: var(--pzsh-color-brand-2);
  color: #ffffff;
  display: flex !important;
  flex-direction: row-reverse;
  width: auto !important;
}

.ember-notify-show > a.close {
  display: flex;
  color: #ffffff;
  padding-left: 10px;
  opacity: 1;
  align-self: center;
}

.account-link,
.account-link:hover {
  color: #000000;
  text-decoration: none !important;
}

@media screen and (max-width: 799px){
  .ember-notify-default.ember-notify-cn {
    bottom: 11em !important;
  }
}

.fallback-info-banner {
  background-color: orange;
  height: 50px;
  line-height: 50px;
  align-content: center;
  text-align: center;
}

.notification-badge {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 5px;
  margin-left: 30px;
}

.notification-badge-color {
  background-color: red;
  color: white;
}

.icon-button-angel-personal-team {
  margin-left: 80px;
}

.team-row-container {
  display: flex;
  align-items: center;
}

